force-app/main/default/objects/Setup_Metadata__mdt/Setup_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Setup Metadata</label>
    <pluralLabel>Setup Metadata</pluralLabel>
</CustomObject>