force-app/main/default/objects/Setup_Metadata__mdt/fields/Error_Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Error_Retry_Time__c</fullName>
    <label>Error Retry Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>