force-app/main/default/objects/Setup_Metadata__mdt/fields/Package_Log_Limit__c.field-meta.xml
<CustomField>
    <fullName>Package_Log_Limit__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>