force-app/main/default/objects/Setup_Metadata__mdt/fields/Package_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Log_Type__c</fullName>
    <label>Package Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>