force-app/main/default/objects/Setup_Metadata__mdt/fields/Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Steps_Completed__c</fullName>
    <label>Steps Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>