force-app/main/default/objects/Setup_Metadata__mdt/fields/Temp_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Temp_Access_Key__c</fullName>
    <label>Temp Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>